@@ -1,8 +1,35 @@
 // $Id$
 
 #include "Messenger_i.h"
+#include "ace/Get_Opt.h"
 
 const ACE_TCHAR *ior_output_file = ACE_TEXT("Messenger.ior");
+
+int
+parse_args (int argc, ACE_TCHAR *argv[])
+{
+  ACE_Get_Opt get_opts (argc, argv, ACE_TEXT("o:"));
+  int c;
+
+  while ((c = get_opts ()) != -1)
+    switch (c)
+      {
+      case 'o':
+        ior_output_file = get_opts.opt_arg ();
+        break;
+
+      case '?':
+      default:
+        ACE_ERROR_RETURN ((LM_ERROR,
+                           "usage:  %s "
+                           "-o <iorfile>"
+                           "\n",
+                           argv [0]),
+                          -1);
+      }
+  // Indicates sucessful parsing of the command line
+  return 0;
+}
 
 int
 ACE_TMAIN(int argc, ACE_TCHAR *argv[])
@@ -10,6 +37,9 @@ ACE_TMAIN(int argc, ACE_TCHAR *argv[])
   try {
     // Initialize orb
     CORBA::ORB_var orb = CORBA::ORB_init( argc, argv );
+
+    if (parse_args (argc, argv) != 0)
+      return 1;
 
     //Get reference to Root POA
     CORBA::Object_var obj = orb->resolve_initial_references( "RootPOA" );
